--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
+  <title>Disciplinas da pós</title>
   <body>
-    <div>teste</div>
-    <div>teste2</div>
-    <div>teste3</div>
-    <div>teste4</div>
-    <div>teste5</div>
-    <div>teste6</div>
+    <ul>
+      <li>Arquitetura de solução</li>
+      <li>Fullstack developer</li>
+      <li>Engenharia de Software</li>
+    <ul>
   </body>
-  </html>
+</html>
