--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-  <title>Disciplinas da pós</title>
+  <title>Laboratórios</title>
   <body>
     <ul>
-      <li>Arquitetura de solução</li>
-      <li>Fullstack developer</li>
-      <li>Engenharia de Software</li>
+      <li>Git e GitHub</li>
+      <li>Docker e Kubernetes</li>
+      <li>DDD</li>
+      <li>Automated Tests</li>
+      <li>Python</li>
     <ul>
   </body>
 </html>
